--- a/app/views/spec_sheet/_cover.html.erb
+++ b/app/views/spec_sheet/_cover.html.erb
@@ -1,15 +1,34 @@
 <div class="page">
-  <table class="cover">
-    <tr>
-      <td>
+  <table class="main">
+    <tr class="body">
+      <td class="image pt3">
         <%= render partial: 'spec_sheet/image', locals: { src: project.image_url } %>
       </td>
-    </tr>
-    <tr>
       <td class="center">
         <div class="pt3">
-          <h1 class="pb3"><%= project.name %></h1>
-          <%= project.ref_number %>
+          <h1 class="page-title pb3"><%= project.name %></h1>
+          <ul class="project-info">
+            <li>
+              <b>Collection:</b>
+              <%= project.collection %>
+            </li>
+            <li>
+              <b>Reference no:</b>
+              <%= project.ref_number %>
+            </li>
+            <li>
+              <b>Contact: </b>
+              <%= project.organization.owner.email %>
+            </li>
+            <li>
+              <b>Color code: </b>
+              <%= project.color_code %>
+            </li>
+            <li>
+              <b>Organization: </b>
+              <%= project.organization.name %>
+            </li>
+          </ul>
         </div>
       </td>
     </tr>
