--- a/app/views/spec_sheet/_image.html.erb
+++ b/app/views/spec_sheet/_image.html.erb
@@ -1,4 +1,5 @@
 <div class="img" style="background-image:url('<%= src %>');">
+  <img src="<%= src %>"> />
   <% if defined?(annotations)
     annotations.each do |a| 
       a.anchors.each do |o| %>
