--- a/app/views/spec_sheet/_materials.html.erb
+++ b/app/views/spec_sheet/_materials.html.erb
@@ -1,9 +1,9 @@
 <% components = data %>
 <td colspan="2" class="vtop pt3">
-  <table class="components data">
+  <table class="materials data">
     <thead>
       <tr>
-        <td>Image</td>
+        <!--<td>Image</td>-->
         <td>Name</td>
         <td>Type</td>
         <td>Quantity</td>
@@ -16,7 +16,13 @@
       <% components.each do |component| %>
         <% material = component.material %>
         <tr>
-          <td></td>
+          <!--
+          <td class="material-img">
+            <% if material.image %>
+              <div class="img" style="background-image: url('<%= material.image.file.url(:small) %>');"></div>
+            <% end %>
+          </td>
+          -->
           <td><%= material.name %></td>
           <td><%= material.type.name %></td>
           <td><%= component.quantity %></td>
