--- a/app/views/spec_sheet/index.html.erb
+++ b/app/views/spec_sheet/index.html.erb
@@ -19,7 +19,7 @@ pagenumber = 1
     <% @components.each_slice(20) do |slice| %>
       <%= render({
         partial: 'spec_sheet/page', 
-        locals: { title: 'Materials', project: @project, data: slice, view: 'components', pagenumber: pagenumber }
+        locals: { title: 'Materials', project: @project, data: slice, view: 'materials', pagenumber: pagenumber }
       }) %>
       <% pagenumber += 1 %>
     <% end %>
