--- a/lib/pdfkit/sass/components/image.scss
+++ b/lib/pdfkit/sass/components/image.scss
@@ -5,13 +5,14 @@
   background-position: center top;
   background-repeat: no-repeat;
   position: relative;
+  background-color: fuchsia;
   .anchor {
     position: absolute;
     top: 0;
     left: 0;
     border-radius: 999px;
-    height: 5px;
-    width: 5px;
+    height: 15px;
+    width: 15px;
     background: lime;
     &.dot {
       width: 40px;
