--- a/app/views/spec_sheet/_cover.html.erb
+++ b/app/views/spec_sheet/_cover.html.erb
@@ -1,8 +1,10 @@
 <div class="page">
   <table class="main">
     <tr class="body">
-      <td class="image pt3">
-        <%= render partial: 'spec_sheet/image', locals: { src: project.image_url } %>
+      <td class="middle-content">
+        <div>
+          <%= render partial: 'spec_sheet/image', locals: { src: project.image_url } %>
+        </div>
       </td>
       <td class="center">
         <div class="pt3">
