--- a/lib/pdfkit/sass/components/image.scss
+++ b/lib/pdfkit/sass/components/image.scss
@@ -6,25 +6,36 @@
   background-repeat: no-repeat;
   position: relative;
   background-color: fuchsia;
-  .anchor {
-    position: absolute;
-    top: 0;
-    left: 0;
-    border-radius: 999px;
-    height: 15px;
-    width: 15px;
-    background: lime;
-    &.dot {
-      width: 40px;
-      height: 40px;
-      background: aqua;
-      border: 5px solid white;
-    }
+  .img-left {
+    background-position: left top;
+  }
+  .img-right {
+    background-position: right top;
   }
 }
-.img-left {
-  background-position: left top;
+.img-container {
+  position: relative;
+  line-height: 0;
+  display: inline-block;
+  width: auto;
 }
-.img-right {
-  background-position: right top;
+.anchor {
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 999px;
+  height: 15px;
+  width: 15px;
+  background: lime;
+  &.dot {
+    width: 40px;
+    height: 40px;
+    background: aqua;
+    border: 5px solid white;
+  }
+}
+.line {
+  position: absolute;
+  height: 2px;
+  background: lime;
 }
