--- a/lib/pdfkit/sass/utilities/utils.scss
+++ b/lib/pdfkit/sass/utilities/utils.scss
@@ -91,10 +91,35 @@ $b3: 2px solid #ccc;
 .vbottom {
   vertical-align: bottom !important;
 }
+.vcenter {
+  vertical-align: center !important;
+}
 .center {
   text-align: center;
 }
 .y-fill {
   height: 100%;
   box-sizing: border-box;
+}
+.middle-content {
+  position: relative;
+  > span {
+    display: inline-block;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+  }
+}
+.pink {
+  background: fuchsia;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 2;
 }
