--- a/app/views/spec_sheet/_measurements.html.erb
+++ b/app/views/spec_sheet/_measurements.html.erb
@@ -3,7 +3,7 @@
   names = data.measurement_names
   values = data.measurement_values
 %>
-<td class="image pt3">
+<td class="pt3">
   <%= render partial: "spec_sheet/image", locals: { src: project.image_url, annotations: project.measurement_annotations } %>
 </td>
 <td class="content pt3">
