--- a/lib/pdfkit/style.css
+++ b/lib/pdfkit/style.css
@@ -91,16 +91,17 @@
 
 .middle-content {
   position: relative; }
-  .middle-content > span {
+  .middle-content > * {
     display: inline-block;
     text-align: center;
     position: absolute;
+    width: 100%;
     top: 50%;
     transform: translateY(-50%);
     -webkit-transform: translateY(-50%); }
 
 .pink {
-  background: fuchsia; }
+  background: rgba(255, 0, 255, 0.6); }
 
 .overlay {
   position: absolute;
@@ -173,8 +174,7 @@ body {
 .img-container {
   position: relative;
   line-height: 0;
-  display: inline-block;
-  width: auto; }
+  width: 100%; }
 
 .anchor {
   position: absolute;
@@ -183,7 +183,9 @@ body {
   border-radius: 999px;
   height: 15px;
   width: 15px;
-  background: lime; }
+  background: lime;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%); }
   .anchor.dot {
     width: 40px;
     height: 40px;
@@ -193,7 +195,9 @@ body {
 .line {
   position: absolute;
   height: 2px;
-  background: lime; }
+  background: lime;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%); }
 
 table {
   width: 100%;
