--- a/lib/pdfkit/style.css
+++ b/lib/pdfkit/style.css
@@ -174,30 +174,33 @@ body {
 .img-container {
   position: relative;
   line-height: 0;
-  width: 100%; }
+  width: auto;
+  display: inline-block; }
 
 .anchor {
-  position: absolute;
+  position: relative;
   top: 0;
-  left: 0;
-  border-radius: 999px;
-  height: 15px;
-  width: 15px;
-  background: lime;
-  transform: translate(-50%, -50%);
-  -webkit-transform: translate(-50%, -50%); }
-  .anchor.dot {
+  left: 0; }
+  .anchor.line-anchor {
+    border-radius: 999px;
+    height: 10px;
+    width: 10px;
+    background: lime;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%); }
+  .anchor.dot-anchor {
+    border-radius: 999px;
     width: 40px;
     height: 40px;
     background: aqua;
     border: 5px solid white; }
 
 .line {
-  position: absolute;
+  position: relative;
   height: 2px;
   background: lime;
-  transform: translate(-50%, -50%);
-  -webkit-transform: translate(-50%, -50%); }
+  transform-origin: left;
+  -webkit-transform-origin: left; }
 
 table {
   width: 100%;
