--- a/app/views/spec_sheet/_comments.html.erb
+++ b/app/views/spec_sheet/_comments.html.erb
@@ -1,26 +1,13 @@
 <% 
-comments = data 
-per_column = 2
-lastcount = comments.length - per_column
-lasttake = lastcount > 0 ? lastcount : 0
+image = data 
+annotations = image.annotations.where(annotatable_type:'Comment')
+comments = annotations.map { |a| a.annotatable }
 %>
-<td colspan="2" class="vtop">
-  <table class="comments">
-    <colgroup>
-      <col width="50%">
-      <col width="50%">
-    </colgroup>
-    <tr>
-      <td>
-        <% comments.take(per_column).each do |comment| %>
-          <%= render partial: "spec_sheet/comment", locals: { comment: comment } %>
-        <% end %>
-      </td>
-      <td>
-        <% comments.last(lasttake).each do |comment| %>
-          <%= render partial: "spec_sheet/comment", locals: { comment: comment } %>
-        <% end %>
-      </td>
-    </tr>
-  </table>
+<td>
+  <%= render partial: "spec_sheet/image", locals: { src: image.file.url(:large), annotations: annotations } %>
+</td>
+<td>
+  <% comments.each do |comment| %>
+    <%= render partial: "spec_sheet/comment", locals: { comment: comment } %>
+  <% end %>
 </td>
