--- a/app/views/notification_mailer/mention.haml
+++ b/app/views/notification_mailer/mention.haml
@@ -1,6 +1,10 @@
-%p= "#{@notification.creator.name} mentioned you:"
+%p{style: "opacity: 0.8;"}
+  %b= @notification.creator.name
+  mentioned you:
 
 = @notification.concern.text.html_safe
 
-%p
-  %a{href: @notification.url} Click here to see it
+%p{style: "opacity: 0.8;"}
+  You can reply to this email or  
+  %a{href: @notification.url} click here
+  to go to the project.
