--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,1 +1,32 @@
-@import 'tachyons';
+@import 'https://cdnjs.cloudflare.com/ajax/libs/basscss/8.0.3/css/basscss.css';
+@import 'https://fonts.googleapis.com/css?family=Lato:300, 400, 700';
+$poiple: #2c52f8;
+html,
+body {
+  margin: 0;
+  height: 100%;
+  font-family: 'Lato', sans-serif;
+  background: rgba(0, 0, 0, 0.02);
+  color: rgba(0, 0, 0, 0.7);
+}
+a {
+  color: $poiple !important;
+  text-decoration: none;
+}
+.box {
+  max-width: 700px;
+  background: #fff;
+  border-radius: 2px;
+  box-shadow: 0 0 400px rgba(0, 0, 0, 0.05);
+}
+.vh-100 {
+  height: 100%;
+}
+button,
+.btn {
+  background: $poiple;
+  color: #fff !important;
+  padding: 8px 12px;
+  display: inline-block;
+  border-radius: 2px;
+}
