--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -10,4 +10,11 @@
     = favicon_link_tag 'favicon.png'
     = csrf_meta_tags
   %body
-    = yield
+    .vh-100.flex.items-center.justify-center.bg-gray-light
+      %div
+        .box
+          .p4
+            = yield
+        .center.mt2
+          %a{href:ENV['WEAVENOTE_SITE_URL']} return
+          
