--- a/app/views/subscriptions/_status_ending.haml
+++ b/app/views/subscriptions/_status_ending.haml
@@ -5,6 +5,6 @@
   = "The subscription for this Organization will cancel on #{@end_date}"
 - if @is_own_subscription
   = form_tag("/subscriptions/#{@subscription.guid}/reactivate", method: :patch) do |f|
-    %button{type:'submit'}= "Reactivate using card ending in #{@subscription.card_last4}"
+    %button.btn{type:'submit'}= "Reactivate using card ending in #{@subscription.card_last4}"
 %p
-  %a{href:new_subscription_path} Start a new subscription
+  %a.btn{href:new_subscription_path} Start a new subscription
