--- a/app/views/subscriptions/_status_ongoing.haml
+++ b/app/views/subscriptions/_status_ongoing.haml
@@ -1,6 +1,4 @@
-%p
-  Status
-  %span.green.bold Enabled
 - if @is_own_subscription
-  = render 'payola/subscriptions/cancel', subscription: @subscription, at_period_end: true
-  %i= "Note: you'll still be able to use Weavenote until #{@end_date} if you cancel."
+  = render 'payola/subscriptions/cancel', subscription: @subscription, at_period_end: true, button_class: 'btn', button_text: "Disable Auto Renew"
+  .mt1
+    %i.h5= "Note: you'll still be able to use Weavenote until #{@end_date} if you cancel."
