--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,20 @@
 @import 'https://cdnjs.cloudflare.com/ajax/libs/basscss/8.0.3/css/basscss.css';
 @import 'https://fonts.googleapis.com/css?family=Lato:300, 400, 700';
+@import 'https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css';
 $poiple: #2c52f8;
+$green: #20bf55;
+$dark1: rgba(0, 0, 0, 0.1);
+$dark2: rgba(0, 0, 0, 0.2);
+$dark3: rgba(0, 0, 0, 0.3);
+$dark4: rgba(0, 0, 0, 0.4);
+$dark5: rgba(0, 0, 0, 0.5);
+$dark6: rgba(0, 0, 0, 0.6);
+$dark7: rgba(0, 0, 0, 0.7);
+$dark8: rgba(0, 0, 0, 0.8);
+$dark9: rgba(0, 0, 0, 0.9);
+* {
+  box-sizing: border-box;
+}
 html,
 body {
   margin: 0;
@@ -14,7 +28,7 @@ a {
   text-decoration: none;
 }
 .box {
-  max-width: 700px;
+  width: 400px;
   background: #fff;
   border-radius: 2px;
   box-shadow: 0 0 400px rgba(0, 0, 0, 0.05);
@@ -24,9 +38,164 @@ a {
 }
 button,
 .btn {
-  background: $poiple;
-  color: #fff !important;
   padding: 8px 12px;
   display: inline-block;
   border-radius: 2px;
+  font-size: 1em;
+  cursor: pointer;
+  text-align: center;
+  background: #fff;
+  color: $dark6 !important;
+  font-weight: normal;
+  border: 1px solid rgb(223, 223, 223);
+  outline: none;
+  span {
+    display: block;
+    font-size: 0.8em;
+    font-weight: normal;
+  }
+}
+.btn.btn-cta {
+  font-size: 1.1em;
+  padding: 16px 20px;
+  background: $green;
+  display: block;
+  width: 100%;
+  color: #fff !important;
+  &:disabled {
+    position: relative;
+    background: transparent;
+    border: none;
+    &:after {
+      content: ' ';
+      background: image-url('loading.svg') center center no-repeat;
+      height: 32px;
+      width: 32px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
+}
+.btn.btn-lg {
+  display: block;
+  width: 100%;
+  padding: 12px 14px;
+}
+.btn.btn-poiple {
+  background: $poiple;
+  color: #fff !important;
+  border: none;
+  font-weight: bold;
+}
+input[type='text'] {
+  font-size: inherit;
+  width: 100%;
+  line-height: 1;
+  padding: 12px 16px;
+  border: 1px solid $dark1;
+  font-size: 1.1em;
+  color: rgba(0, 0, 0, 0.7);
+  outline: none;
+  &:focus {
+    border-color: $dark4;
+  }
+}
+.icon-input {
+  position: relative;
+  &:after {
+    font-family: FontAwesome;
+    position: absolute;
+    right: 16px;
+    top: 50%;
+    z-index: 2;
+    transform: translateY(-50%);
+    opacity: 0.8;
+  }
+}
+.card-input {
+  @extend .icon-input;
+  &:after {
+    content: '\f09d';
+  }
+}
+.date-input {
+  @extend .icon-input;
+  &:after {
+    content: '\f073';
+  }
+  display: flex;
+  input:first-child {
+    border-right: none;
+    width: 35%;
+    padding-right: 0;
+  }
+  input:last-child {
+    width: 65%;
+  }
+}
+.cvc-input {
+  @extend .icon-input;
+  &:after {
+    content: '\f023';
+  }
+}
+.name-input {
+  @extend .icon-input;
+  &:after {
+    content: '\f2c0';
+  }
+}
+.dark3 {
+  color: $dark3;
+}
+::-webkit-input-placeholder {
+  color: $dark3;
+}
+:-moz-placeholder {
+  color: $dark3;
+  opacity: 1;
+}
+::-moz-placeholder {
+  color: $dark3;
+  opacity: 1;
+}
+:-ms-input-placeholder {
+  color: $dark3;
+}
+::-ms-input-placeholder {
+  color: $dark3;
+}
+table {
+  border-collapse: collapse;
+  font-size: 0.9em;
+  width: 100%;
+  td {
+    border: 1px solid #eee;
+    padding: 9px;
+    &:last-child {
+      text-align: right;
+    }
+  }
+}
+#logo {
+  background: image-url('logo.png') center center no-repeat;
+  width: 65px;
+  height: 45px;
+  display: inline-block;
+}
+.poiple {
+  color: $poiple;
+}
+.red {
+  color: #85144b;
+}
+.green {
+  color: $green;
+}
+.payola-payment-error {
+  @extend .red;
+  margin-bottom: 10px;
+  display: block;
 }
