--- a/app/views/subscriptions/new.haml
+++ b/app/views/subscriptions/new.haml
@@ -28,4 +28,6 @@
         %span
           = "Monthly #{@plan.currency_symbol}#{@plan.amount}".html_safe
 .mt2.center.h5
-  %a{href:'/'} Back
+  %a{href:'/'} 
+    %i.fa.fa-chevron-left.mr1
+    Back
