--- a/app/views/subscriptions/dashboard.haml
+++ b/app/views/subscriptions/dashboard.haml
@@ -10,3 +10,7 @@
       = render partial: 'status_ongoing'
   - else
     %a.btn.btn-cta{href:new_subscription_path} New subscription
+.mt2.center.h5
+  %a{href:ENV['WEAVENOTE__SITE_URL']} 
+    %i.fa.fa-chevron-left.mr1
+    Back to main site
