--- a/lib/css/sass/pdf.scss
+++ b/lib/css/sass/pdf.scss
@@ -1,4 +1,5 @@
 @import 'utilities/utils';
+@import 'base/variables';
 @import 'base/base';
 @import 'components/page';
 @import 'components/image';
