--- a/app/views/spec_sheet/_image.haml
+++ b/app/views/spec_sheet/_image.haml
@@ -1,9 +1,12 @@
-.img-container
+#asd.img-container
   %img{:src => src}
   .overlay
     - if defined?(annotations)
       - annotations.each do |a|
         - a.anchors.each do |o|
           %div{:class => "anchor #{a.type}-anchor", :style => "top: #{o.y_percent}%; left: #{o.x_percent}%;"}
-        - if a.anchors.size > 1
-          %div{:class => "line #{a.type}-line", :style => "#{a.line_css[:line]}#{a.line_css[:anchor]}"}
+      %svg#svg{width:'100%',height:'100%'}
+        - annotations.each do |a|
+          - l = a.line_points 
+          - if l
+            %line{ x1:l[0], y1: l[1], x2:l[2], y2: l[3] }
