--- a/app/views/spec_sheet/_measurements.haml
+++ b/app/views/spec_sheet/_measurements.haml
@@ -3,7 +3,7 @@
 - values = data.measurement_values
 - image = project.primary_image
 %td.pt3
-  = render partial: "spec_sheet/image", locals: { src: image.file.url(:large), annotations: image.annotations.where(type:'line') }
+  = render partial: "spec_sheet/image", locals: { src: image.file.url(:large), annotations: image.annotations.active }
 %td.content.pt3
   %table.measurements
     %thead
