--- a/lib/css/pdf.css
+++ b/lib/css/pdf.css
@@ -176,29 +176,40 @@ body {
   line-height: 0;
   width: auto;
   display: inline-block; }
+  .img-container svg {
+    -webkit-transform: scale(0.565);
+    -webkit-transform-origin: top left;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0; }
+    .img-container svg line {
+      stroke-width: 4px;
+      stroke: #42ea83; }
 
 .anchor {
-  position: relative;
+  position: absolute;
   top: 0;
   left: 0; }
-  .anchor.line-anchor {
+  .anchor.line-anchor, .anchor.arrow-anchor {
     border-radius: 999px;
-    height: 10px;
-    width: 10px;
-    background: lime;
+    height: 15px;
+    width: 15px;
+    background: #42ea83;
     transform: translate(-50%, -50%);
     -webkit-transform: translate(-50%, -50%); }
   .anchor.dot-anchor {
     border-radius: 999px;
-    width: 40px;
-    height: 40px;
-    background: aqua;
-    border: 5px solid white; }
+    width: 30px;
+    height: 30px;
+    background: #51b2fe;
+    border: 4px solid white; }
 
 .line {
-  position: relative;
-  height: 2px;
-  background: lime;
+  position: absolute;
+  height: 4px;
+  background: #42ea83;
   transform-origin: left;
   -webkit-transform-origin: left; }
 
