--- a/lib/css/sass/components/image.scss
+++ b/lib/css/sass/components/image.scss
@@ -18,33 +18,47 @@
   line-height: 0;
   width: auto;
   display: inline-block;
-  img {
+  svg {
+    -webkit-transform: scale(0.565);
+    -webkit-transform-origin: top left;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    // width: 800px;
+    // height: 1200px;
+    line {
+      stroke-width: 4px;
+      stroke: $green;
+    }
   }
 }
 .anchor {
-  position: relative;
+  position: absolute;
   top: 0;
   left: 0;
-  &.line-anchor {
+  &.line-anchor,
+  &.arrow-anchor {
     border-radius: 999px;
-    height: 10px;
-    width: 10px;
-    background: lime;
+    height: 15px;
+    width: 15px;
+    background: $green;
     transform: translate(-50%, -50%);
     -webkit-transform: translate(-50%, -50%);
   }
   &.dot-anchor {
     border-radius: 999px;
-    width: 40px;
-    height: 40px;
-    background: aqua;
-    border: 5px solid white;
+    width: 30px;
+    height: 30px;
+    background: $blue;
+    border: 4px solid white;
   }
 }
 .line {
-  position: relative;
-  height: 2px;
-  background: lime;
+  position: absolute;
+  height: 4px;
+  background: $green;
   transform-origin: left;
   -webkit-transform-origin: left;
 }
