--- a/lib/css/sass/components/page.scss
+++ b/lib/css/sass/components/page.scss
@@ -4,6 +4,7 @@
   padding: $p3 * 2;
   position: relative;
   overflow: hidden;
+  background: #fff;
   table.main {
     height: 100%;
     td.header {
