--- a/app/views/spec_sheet/_image.haml
+++ b/app/views/spec_sheet/_image.haml
@@ -1,12 +1,18 @@
-#asd.img-container
+- klass = 'img-container'
+- unless @options[:html_version]
+  - klass += ' scale-fix'
+%div{class:klass}
   %img{:src => src}
   .overlay
     - if defined?(annotations)
       - annotations.each do |a|
-        - a.anchors.each do |o|
-          %div{:class => "anchor #{a.type}-anchor", :style => "top: #{o.y_percent}%; left: #{o.x_percent}%;"}
-      %svg#svg{width:'100%',height:'100%'}
+        - if a.type == 'dot'
+          - anchor = a.anchors[0]
+          %div{:class => "dot", :style => "top: #{o.y_percent}%; left: #{o.x_percent}%;"}
+      %svg{width:'100%',height:'100%'}
+        %marker{id:"arrowhead", viewBox:"0 0 10 10", refX:"0", refY:"5", markerUnits:"strokeWidth", markerWidth:"4", markerHeight:"3", orient:"auto"}
+          %path{d:"M 0 0 L 10 5 L 0 10 z"}
         - annotations.each do |a|
           - l = a.line_points 
           - if l
-            %line{ x1:l[0], y1: l[1], x2:l[2], y2: l[3] }
+            %line{ class: a.type, x1:l[0], y1: l[1], x2:l[2], y2: l[3] }
