--- a/lib/css/pdf.css
+++ b/lib/css/pdf.css
@@ -131,7 +131,8 @@ body {
   width: 596mm;
   padding: 80px;
   position: relative;
-  overflow: hidden; }
+  overflow: hidden;
+  background: #fff; }
   .page table.main {
     height: 100%; }
     .page table.main td.header .app-title {
@@ -176,42 +177,41 @@ body {
   line-height: 0;
   width: auto;
   display: inline-block; }
-  .img-container svg {
+  .img-container.scale-fix svg {
     -webkit-transform: scale(0.565);
-    -webkit-transform-origin: top left;
+    -webkit-transform-origin: top left; }
+  .img-container svg {
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0; }
+    .img-container svg #arrowhead path {
+      fill: #42ea83; }
     .img-container svg line {
-      stroke-width: 4px;
-      stroke: #42ea83; }
+      stroke-width: 6px;
+      stroke: #42ea83;
+      stroke-dasharray: 14, 4; }
+      .img-container svg line.arrow {
+        marker-end: url(#arrowhead);
+        stroke-dasharray: none; }
 
-.anchor {
+.dot {
   position: absolute;
   top: 0;
-  left: 0; }
-  .anchor.line-anchor, .anchor.arrow-anchor {
+  left: 0;
+  border-radius: 999px;
+  width: 30px;
+  height: 30px;
+  background: #51b2fe;
+  border: 4px solid white; }
+  .dot.line-anchor, .dot.arrow-anchor {
     border-radius: 999px;
     height: 15px;
     width: 15px;
     background: #42ea83;
     transform: translate(-50%, -50%);
     -webkit-transform: translate(-50%, -50%); }
-  .anchor.dot-anchor {
-    border-radius: 999px;
-    width: 30px;
-    height: 30px;
-    background: #51b2fe;
-    border: 4px solid white; }
-
-.line {
-  position: absolute;
-  height: 4px;
-  background: #42ea83;
-  transform-origin: left;
-  -webkit-transform-origin: left; }
 
 table {
   width: 100%;
