--- a/lib/css/sass/components/image.scss
+++ b/lib/css/sass/components/image.scss
@@ -18,26 +18,43 @@
   line-height: 0;
   width: auto;
   display: inline-block;
+  &.scale-fix {
+    svg {
+      -webkit-transform: scale(0.565);
+      -webkit-transform-origin: top left;
+    }
+  }
   svg {
-    -webkit-transform: scale(0.565);
-    -webkit-transform-origin: top left;
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    // width: 800px;
-    // height: 1200px;
+    #arrowhead {
+      path {
+        fill: $green;
+      }
+    }
     line {
-      stroke-width: 4px;
+      stroke-width: 6px;
       stroke: $green;
+      stroke-dasharray: 14, 4;
+      &.arrow {
+        marker-end: url(#arrowhead);
+        stroke-dasharray: none;
+      }
     }
   }
 }
-.anchor {
+.dot {
   position: absolute;
   top: 0;
   left: 0;
+  border-radius: 999px;
+  width: 30px;
+  height: 30px;
+  background: $blue;
+  border: 4px solid white;
   &.line-anchor,
   &.arrow-anchor {
     border-radius: 999px;
@@ -47,18 +64,4 @@
     transform: translate(-50%, -50%);
     -webkit-transform: translate(-50%, -50%);
   }
-  &.dot-anchor {
-    border-radius: 999px;
-    width: 30px;
-    height: 30px;
-    background: $blue;
-    border: 4px solid white;
-  }
-}
-.line {
-  position: absolute;
-  height: 4px;
-  background: $green;
-  transform-origin: left;
-  -webkit-transform-origin: left;
 }
