--- a/app/views/spec_sheet/_header.haml
+++ b/app/views/spec_sheet/_header.haml
@@ -5,6 +5,6 @@
       %col{:width => "60%"}/
     %tr
       %td
-        .app-title= project.name
+        .app-title= @project.name
         %h1.page-title= title
       %td
