--- a/app/views/spec_sheet/pages/_new.haml
+++ b/app/views/spec_sheet/pages/_new.haml
@@ -1,5 +1,5 @@
 %td.image.pt3
-  = render partial: "spec_sheet/image", locals: { src: project.image_url }
+  = render partial: "spec_sheet/image", locals: { src: @project.image_url }
 %td.content
   %p It looks like this is a new project!
   Add measurements, instructions, and materials to see more here.
