--- a/lib/css/sass/pdf.scss
+++ b/lib/css/sass/pdf.scss
@@ -4,6 +4,7 @@
 @import 'components/page';
 @import 'components/image';
 @import 'components/table';
+@import 'components/annotations';
 @import 'modules/comments';
 @import 'modules/cover';
 @import 'modules/instructions';
