--- a/app/views/spec_sheet/index.haml
+++ b/app/views/spec_sheet/index.haml
@@ -1,4 +1,4 @@
-- pagenumber = 1
+- @pagenumber = 1
 - @components = @project.components
 - @measurements = @project.measurement_values
 - @instructions = @project.instructions
@@ -18,33 +18,33 @@
   %body
 
     - if @options[:cover]
-      = render({ partial: 'spec_sheet/cover', locals: { project: @project }})
+      = render({ partial: 'spec_sheet/pages/cover' })
 
     - if @components.any? && @options[:materials]
       - @components.each_slice(20) do |slice|
-        = render partial: 'spec_sheet/page', locals: { title: 'Materials', project: @project, data: slice, view: 'materials', pagenumber: pagenumber } 
+        = render partial: 'spec_sheet/page', locals: { title: 'Materials', data: slice, view: 'pages/materials' } 
                                                                                                             
-        - pagenumber += 1
+        - @pagenumber += 1
 
     - if @measurements.any? && @options[:measurements]
-      = render partial: 'spec_sheet/page', locals: { title: 'Measurements', project: @project, data: @project, view: 'measurements', pagenumber: pagenumber } 
-      - pagenumber += 1
+      = render partial: 'spec_sheet/page', locals: { title: 'Measurements', view: 'pages/measurements' } 
+      - @pagenumber += 1
 
     - if @instructions.any? && @options[:instructions]
       - @instructions.each_slice(4) do |slice|
-        = render partial: 'spec_sheet/page', locals: { title: 'Instructions', project: @project, data: slice, view: 'instructions', pagenumber: pagenumber } 
-        - pagenumber += 1
+        = render partial: 'spec_sheet/page', locals: { title: 'Instructions', data: slice, view: 'pages/instructions' } 
+        - @pagenumber += 1
         
     - if @options[:comments]
       - if @options[:comments] == 'Annotated'
         - @images.with_comment_annotations.each do |i|
-          = render partial: 'spec_sheet/page', locals: { title: 'Comments', project: @project, data: i, view: 'comments', pagenumber: pagenumber }
-          - pagenumber += 1
+          = render partial: 'spec_sheet/page', locals: { title: 'Comments', data: i, view: 'pages/comments' }
+          - @pagenumber += 1
           
     - if @images.length > 1 && @options[:secondary_images]
       - @images.drop(1).each_slice(2) do |slice|
-        = render partial: 'spec_sheet/page', locals: { title: 'Secondary images', project: @project, data: slice, view: 'images', pagenumber: pagenumber } 
-        - pagenumber += 1
+        = render partial: 'spec_sheet/page', locals: { title: 'Secondary images', data: slice, view: 'pages/images' } 
+        - @pagenumber += 1
     
     = render partial: 'spec_sheet/script'
     
