--- a/lib/css/sass/utilities/utils.scss
+++ b/lib/css/sass/utilities/utils.scss
@@ -101,6 +101,9 @@ $b3: 2px solid #ccc;
   height: 100%;
   box-sizing: border-box;
 }
+.x-fill {
+  width: 100%;
+}
 .middle-content {
   position: relative;
   > * {
