--- a/app/views/spec_sheet/pages/_instructions.haml
+++ b/app/views/spec_sheet/pages/_instructions.haml
@@ -1,13 +1,8 @@
 - instructions = data
 %td.vtop.pt3{:colspan => "2"}
-  %table.instructions
-    %colgroup
-      %col{:width => "50%"}/
-      %col{:width => "50%"}/
-    - instructions.each_slice(2) do |slice|
-      %tr
-        - slice.each do |instruction|
-          %td
-            = render partial: "spec_sheet/instruction", locals: { instruction: instruction }
-        - if slice.size < 2
-          %td
+  - instructions.each_slice(2) do |slice|
+    - slice.each do |instruction|
+      = render partial: "spec_sheet/instruction", locals: { instruction: instruction }
+      - if slice.size < 2
+        .instruction
+    .clear
