--- a/lib/css/sass/modules/instructions.scss
+++ b/lib/css/sass/modules/instructions.scss
@@ -1,40 +1,25 @@
-table.instructions {
-  width: 100%;
-  height: 100%;
-  > tbody {
-    > tr {
-      &:not(:last-child) {
-        > td {
-          padding-bottom: $p3;
+.instruction {
+  padding: $p2;
+  border: 2px solid #eee;
+  margin-bottom: $p2;
+  float: left;
+  width: 49%;
+  > table {
+    height: 100%;
+    width: 100%;
+    > tbody {
+      tr {
+        td.instruction-text {
+          vertical-align: top;
         }
-      }
-      > td {
-        padding-top: $p3;
-        vertical-align: top;
-        table.instruction {
+        &.instruction-images {
           height: 100%;
-          width: 100%;
-          > tbody {
-            tr {
-              td.instruction-text {
-                vertical-align: top;
-              }
-              &.instruction-images {
-                height: 100%;
-                td:not(:last-child) {
-                  padding-right: $p2;
-                }
-              }
-            }
+          td:not(:last-child) {
+            padding-right: $p2;
           }
-        }
-        &:first-child {
-          padding-right: $p3;
-        }
-        &:last-child {
-          padding-left: $p3;
         }
       }
     }
   }
+  margin-right: $p2;
 }
